# rdf_tools

./: .gitignore  README.md  pyproject.toml
LD_conversion/: main.py
LD_conversion/input/: converted.jsonld
LD_conversion/output/: pretty.ttl
LD_resources/: shacl-shacl.ttl
Projects/SDSC_Internal_KG/: Initial Classes and properties SDSC Knolwedge graph.xlsx  SDSC_IKG_shapes.ttl
SDSC_Internal_KG/: SDSC_IKG_shapes.ttl
SHACL/: Dockerfile  config.ini  pyshacl_shacl.py  topbraid_shacl.py
SHACL/instance_data/: invalid.ttl  valid.ttl
SHACL/shacl-142/: README.md
SHACL/shapes_graphs/: ImagingOntology.ttl  SHACL-testing.ttl  shapesfile.ttl
SHACL/shapes_graphs/test_library/: shclass  shdatatype  shin  shmaxcount  shmincount  shorshclass  shorshdatatype  shsparqlconstraint10filternotexist  shsparqlconstraintfilternotexist  sphnOnt.ttl
SHACL/shapes_graphs/test_library/sphnSplit/: shapes1.ttl  shapes10.ttl  shapes2.ttl  shapes3.ttl  shapes4.ttl  shapes5.ttl  shapes6.ttl  shapes7.ttl  shapes8.ttl  shapes9.ttl  sphnOntWOSparql.ttl
SHACL/validation_reports/: .gitkeep  output2023-18-26_111816test.ttl  output2023-57-25_155723.ttl
