[tool.poetry]
name = "rdf-tools"
version = "0.1.0"
description = ""
authors = ["rmfranken <77491494+rmfranken@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "rdf_tools"}]

[tool.poetry.dependencies]
python = "^3.10"
pyshacl = "^0.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
